--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "mjttokenlist",
+  "name": "mjt-token-list",
   "version": "1.0.0",
   "description": "=> details：[https://docs.mojitoswap.finance/q-and-a/make-your-own-drinks-on-mojitoswap](https://docs.mojitoswap.finance/q-and-a/make-your-own-drinks-on-mojitoswap)",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
